--- a/styles.css
+++ b/styles.css
@@ -119,24 +119,31 @@ header span {
 }
 
 .intro {
-    margin-top: 30px;
+    margin-top: 100px;
     text-align: center;
 }
 
 .intro .title {
     font-size: 3rem;
+    margin-bottom: 15px;
 }
 
 .intro .subtitle {
     font-size: 1.5rem;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     color: var(--text-color-secondary);
 }
 
 .intro .tagline {
-    margin-bottom: 15px;
+    margin-bottom: 40px;
+    
 }
 
+.intro h1,
+.intro h2,
+.intro .tagline {
+    text-align: left;    
+    }
 .languages {
     background: var(--bg-tint);
     margin-top: 50px;
