--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 }
 
 body {
-    font-family: Inter, sans-serif;
+    font-family: Garamond , serif;
     font-size: 16px;
     background-color: var(--bg-color);
     color: var(--text-color);
