--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
@@ -31,7 +31,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  font-family: "Poppins", sans-serif;
+  font-family: "JetBrains Mono", sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
   line-height: 1.6;
@@ -56,7 +56,7 @@ body {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "JetBrains Mono", sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
 }
