--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ '/scripts/styles.css' | relative_url }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="{{ '/scripts/script.js' | relative_url }}" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   </head>
   <body>
     <header>
