--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,37 +11,45 @@
   </head>
   <body>
     <header>
+      <div class="nav-wrapper">
+        <button class="switch-theme" id="switch-theme-btn"></button>
 
-        <div class="nav-wrapper">
-          <button class="switch-theme" id="switch-theme-btn"></button>
-  
-          <button class="hamburger" id="hamburger-btn">
-            <i class="fas fa-bars"></i>
-          </button>
-  
-          <nav class="top-nav">
-            <ul>
-              <li><a href="{{ '/' | relative_url }}">Home</a></li>
-              <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
-              <li><a href="{{ '/about-me/' | relative_url }}" >About Me</a></li>
-              <li><a href="{{ '/blog/' | relative_url }}" class="active">Blog</a></li>
-            </ul>
-          </nav>
-  
-          <!-- Full-screen navigation for mobile -->
-          <nav class="fullscreen-nav" id="fullscreen-nav">
-            <ul>
-                <li><a href="{{ '/' | relative_url }}">Home</a></li>
-                <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
-                <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
-                <li><a href="{{ '/blog/' | relative_url }}" >Blog</a></li>
-            </ul>
-          </nav>
+        <button class="hamburger" id="hamburger-btn">
+          <i class="fas fa-bars"></i>
+        </button>
+
+        <nav class="top-nav">
+          <ul>
+            <li><a href="{{ '/' | relative_url }}">Home</a></li>
+            <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
+            <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
+            <li><a href="{{ '/blog/' | relative_url }}" class="active">Blog</a></li>
+          </ul>
+        </nav>
+
+        <nav class="fullscreen-nav" id="fullscreen-nav">
+          <ul>
+            <li><a href="{{ '/' | relative_url }}">Home</a></li>
+            <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
+            <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
+            <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <article class="post">
+        <div class="post-card">
+          <div class="content-wrapper">
+            <h1>{{ page.title }}</h1>
+            <p><em>{{ page.date | date: "%B %d, %Y" }}</em></p>
+            <div class="content">
+              {{ content }}
+            </div>
+          </div>
         </div>
-      </header>
-
-    <main class="container">
-      {{ content }}
+      </article>
     </main>
 
     <footer>
