--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -30,7 +30,7 @@
 }
 
 a {
-color: var(--shadow);
+  color: var(--shadow);
 }
 
 /* Global Styles */
@@ -49,7 +49,7 @@ body {
 .container {
   width: 90%;
   max-width: 75rem; /* 1200px */
-  margin: 0 auto;
+  margin: 3rem auto;
   margin-bottom: 6.25rem; /* 100px */
   padding: 2.5rem; /* 40px */
 }
@@ -199,7 +199,8 @@ header {
 }
 
 /* Responsive Styling */
-@media (max-width: 48rem) { /* 768px */
+@media (max-width: 48rem) {
+  /* 768px */
   .top-nav {
     display: none; /* Hide top nav on small screens */
   }
@@ -300,7 +301,10 @@ button:hover {
 /* Projects Grid */
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(13.75rem, 1fr)); /* minmax(220px, 1fr) */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(13.75rem, 1fr)
+  ); /* minmax(220px, 1fr) */
   gap: 1.25rem; /* 20px */
 }
 
@@ -372,7 +376,10 @@ button:hover {
 /* Tech Container */
 .tech-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr)); /* minmax(200px, 1fr) */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(12.5rem, 1fr)
+  ); /* minmax(200px, 1fr) */
   gap: 2.5rem; /* 40px */
 }
 
@@ -404,7 +411,8 @@ button:hover {
   padding-left: 0.9375rem; /* 15px */
 }
 
-@media (max-width: 48rem) { /* 768px */
+@media (max-width: 48rem) {
+  /* 768px */
   .tech-container {
     grid-template-columns: 1fr;
   }
@@ -597,7 +605,8 @@ b {
 }
 
 /* Responsive design to ensure it looks good on smaller screens */
-@media (max-width: 48rem) { /* 768px */
+@media (max-width: 48rem) {
+  /* 768px */
   .posts-grid {
     grid-template-columns: 1fr; /* Single column on smaller screens */
   }
@@ -682,7 +691,8 @@ b {
 }
 
 /* Responsive adjustments for mobile screens */
-@media (max-width: 48rem) { /* 768px */
+@media (max-width: 48rem) {
+  /* 768px */
   .container {
     padding: 1.25rem; /* 20px */
   }
@@ -750,7 +760,8 @@ b {
 }
 
 /* Responsive Adjustments */
-@media (max-width: 48rem) { /* 768px */
+@media (max-width: 48rem) {
+  /* 768px */
   .content-wrapper {
     padding: 0.625rem; /* 10px */
   }
@@ -808,7 +819,10 @@ b {
 /* Post card wrapper */
 .post-name-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15.625rem, 1fr)); /* minmax(250px, 1fr) */
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(15.625rem, 1fr)
+  ); /* minmax(250px, 1fr) */
   gap: 1.5rem; /* 24px */
 }
 
@@ -883,4 +897,63 @@ b {
   font-size: 1.5rem;
   border: 0.0625rem solid #ccc; /* 1px */
   border-radius: 0.5rem; /* 8px */
+}
+
+/* binary */
+.container {
+  text-align: center;
+  background-color: var(--boxes);
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: var(--main-color);
+}
+
+.converter {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+/* Input Group Styling */
+.input-group {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+label {
+  font-size: 1.2rem;
+  color: var(--text-color);
+}
+
+input[type="text"] {
+  font-size: 1.2rem;
+  padding: 0.8rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--shadow);
+  width: 50rem;
+  margin-top: 1rem;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border-color: #0056b3;
+}
+
+button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  background-color: #0056b3;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  width: 10rem;
 }
