--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,44 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ '/scripts/styles.css' | relative_url }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="{{ '/scripts/script.js' | relative_url }}" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  </head>
-  <body>
-    <header>
-      <div class="nav-wrapper">
-        <button class="switch-theme" id="switch-theme-btn"></button>
+---
+layout: default
+---
 
-        <button class="hamburger" id="hamburger-btn">
-          <i class="fas fa-bars"></i>
-        </button>
-
-        <nav class="top-nav">
-          <ul>
-            <li><a href="{{ '/' | relative_url }}">Home</a></li>
-            <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
-            <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
-            <li><a href="{{ '/blog/' | relative_url }}" class="active">Blog</a></li>
-          </ul>
-        </nav>
-
-        <nav class="fullscreen-nav" id="fullscreen-nav">
-          <ul>
-            <li><a href="{{ '/' | relative_url }}">Home</a></li>
-            <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
-            <li><a href="{{ '/about-me/' | relative_url }}">About Me</a></li>
-            <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <main>
       <article class="post">
         <div class="post-card">
           <div class="content-wrapper">
@@ -50,11 +13,4 @@
           </div>
         </div>
       </article>
-    </main>
 
-    <footer>
-      <nametag>All opinions expressed are my own and do not reflect the views of my employer or university.</nametag>
-      <b><a href="https://github.com/Schizzle13/Schizzle13.github.io" target="_blank">Source Code</a></b>
-    </footer>
-  </body>
-</html>
