fixed reactive design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     <header>
       <div class="nav-wrapper">
         <div class="title-wrapper">
-          <h2 class="title2">Frank Trani</h2>
+          <a class="title2">Frank Trani</a>
         </div>
 
         <button class="switch-theme" id="switch-theme-btn"></button>
